Bug 127296 - [build] world (libntp) does not compile when NO_OPENSSL is set
Summary: [build] world (libntp) does not compile when NO_OPENSSL is set
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: misc (show other bugs)
Version: 6.3-STABLE
Hardware: Any Any
: Normal Affects Only Me
Assignee: Ollivier Robert
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-09-11 11:10 UTC by Oliver Lehmann
Modified: 2008-09-12 23:30 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Lehmann freebsd_committer 2008-09-11 11:10:00 UTC
	when NO_OPENSSL = YES is specified, world does not compile. I've the following
	make options set in make.conf:

NO_KERBEROS="YES"
NO_BLUETOOTH="YES"
NO_CVS="YES"
NO_DICT="YES"
NO_FORTRAN="YES"
NO_GPIB="YES"
NO_I4B="YES"
NO_IPFILTER="YES"
NO_PF="YES"
NO_AUTHPF="YES"
NO_INET6="YES"
NO_ATM="YES"
NO_USB="YES"
NO_LPR="YES"
NO_ACPI="YES"
NO_MAILWRAPPER="YES"
NO_NETCAT="YES"
NO_NIS="YES"
NO_OPENSSH="YES"
NO_OPENSSL="YES"
NO_SENDMAIL="YES"
NO_SHAREDOCS="YES"
NO_CRYPT="YES"
NO_GAMES="YES"
NO_INFO="YES"
NO_BIND="YES"
PPP_NO_NAT="YES"
PPP_NO_NETGRAP="YES"
PPP_NO_RADIUS="YES"
PPP_NO_SUID="YES"
NO_RCMDS="YES"

	and this is the error I get:

===> usr.sbin/ntp/libntp (depend)
rm -f .depend
mkdep -f .depend -a    -I/usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include -I/usr/src/usr.sbin/ntp/libntp/../ -DSYS_FREEBSD -DPARSE -DHAVE_CONFIG_H /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/a_md5encrypt.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/adjtime.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/atoint.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/atolfp.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/atouint.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/audio.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/authkeys.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/authreadkeys.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/authusekey.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/buftvtots.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/caljulian.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/caltontp.c /usr/src/usr.sb
 in/ntp/libntp/../../../contrib/ntp/libntp/calyearstart.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/clocktime.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/clocktypes.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/decodenetnum.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/dofptoa.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/dolfptoa.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/emalloc.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/findconfig.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/fptoa.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/fptoms.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/getopt.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/hextoint.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/hextolfp.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/humandate.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/n
 tp/libntp/icom.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/inttoa.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/iosignal.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/lib_strbuf.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/machines.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/md5c.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/memmove.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/mfptoa.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/mfptoms.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/mktime.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/modetoa.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/mstolfp.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/ntp_random.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/msutotsf.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/msyslog.c /usr/src/usr.sbin/ntp/libntp/..
 /../../contrib/ntp/libntp/netof.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/ntp_rfc2553.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/numtoa.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/numtohost.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/octtoint.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/prettydate.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/recvbuff.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/refnumtoa.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/snprintf.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/socktoa.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/socktohost.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/strstr.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/systime.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/statestr.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/strerror.c 
 /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/syssignal.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/tsftomsu.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/tstotv.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/tvtoa.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/tvtots.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/uglydate.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/uinttoa.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/utvtoa.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/ymd2yd.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libisc/assertions.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libisc/error.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libisc/inet_ntop.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libisc/inet_pton.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libisc/interfaceiter.c /usr/src/usr.sbin/ntp/libntp/../../../cont
 rib/ntp/libisc/isc_strerror.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libisc/lib.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libisc/mem.c /usr/src/usr.sbin/tp/libntp/../../../contrib/ntp/libisc/msgcat.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libisc/net.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libisc/netscope.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libisc/netaddr.c /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libisc/sockaddr.c
In file included from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp.h:10,
                 from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/authkeys.c:13:
/usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp_crypto.h:5:25: openssl/evp.h: No such file or directory
In file included from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp.h:10,
                 from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/authreadkeys.c:8:
/usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp_crypto.h:5:25: openssl/evp.h: No such file or directory
In file included from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp.h:10,
                 from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/clocktypes.c:7:
/usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp_crypto.h:5:25: openssl/evp.h: No such file or directory
In file included from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp.h:10,
                 from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntpd.h:7,
                 from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/iosignal.c:41:
/usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp_crypto.h:5:25: openssl/evp.h: No such file or directory
In file included from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp.h:10,
                 from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/netof.c:9:
/usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp_crypto.h:5:25: openssl/evp.h: No such file or directory
In file included from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp.h:10,
                 from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntpd.h:7,
                 from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/ntp_rfc2553.c:79:
/usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp_crypto.h:5:25: openssl/evp.h: No such file or directory
In file included from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp.h:10,
                 from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/recvbuff.h:8,
                 from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/recvbuff.c:11:
/usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp_crypto.h:5:25: openssl/evp.h: No such file or directory
In file included from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp.h:10,
                 from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/socktoa.c:22:
/usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp_crypto.h:5:25: openssl/evp.h: No such file or directory
In file included from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp.h:10,
                 from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/socktohost.c:15:
/usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp_crypto.h:5:25: openssl/evp.h: No such file or directory
In file included from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp.h:10,
                 from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntpd.h:7,
                 from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/systime.c:13:
/usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp_crypto.h:5:25: openssl/evp.h: No such file or directory
In file included from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp.h:10,
                 from /usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/libntp/statestr.c:10:
/usr/src/usr.sbin/ntp/libntp/../../../contrib/ntp/include/ntp_crypto.h:5:25: openssl/evp.h: No such file or directory
mkdep: compile failed
*** Error code 1

Stop in /usr/src/usr.sbin/ntp/libntp.
*** Error code 1

Stop in /usr/src/usr.sbin/ntp.
*** Error code 1

Stop in /usr/src/usr.sbin.
*** Error code 1

Stop in /usr/src.
*** Error code 1

Stop in /usr/src.
*** Error code 1

Stop in /usr/src.
Exit 1

Fix: 

disable SSL support in libntp when SSL is disabled at all.
How-To-Repeat: 	set my make options posted above
Comment 1 Oliver Lehmann 2008-09-11 15:16:08 UTC
additional note:

this is probably because in config.h OPENSSL is defined unconditional and
so it is active in any situation.

-- 
 Oliver Lehmann
  http://www.pofo.de/
  http://wishlist.ans-netz.de/
Comment 2 Ollivier Robert freebsd_committer 2008-09-11 21:25:17 UTC
Responsible Changed
From-To: freebsd-bugs->roberto

ntpd is mine to handle.
Comment 3 dfilter service freebsd_committer 2008-09-11 21:32:37 UTC
roberto     2008-09-11 20:32:06 UTC

  FreeBSD src repository

  Modified files:
    usr.sbin/ntp         config.h 
  Log:
  SVN rev 182944 on 2008-09-11 20:32:06Z by roberto
  
  Makefile.inc already defines OPENSSL if crypto is available/wanted.
  
  PR:             bin/127296
  Submitted by:   oliver
  MFC after:      3 days
  
  Revision  Changes    Path
  1.16      +1 -1      src/usr.sbin/ntp/config.h
_______________________________________________
cvs-all@freebsd.org mailing list
http://lists.freebsd.org/mailman/listinfo/cvs-all
To unsubscribe, send any mail to "cvs-all-unsubscribe@freebsd.org"
Comment 4 Ollivier Robert freebsd_committer 2008-09-11 21:32:47 UTC
State Changed
From-To: open->closed

Makefile.inc does the symol magic for us for OPENSSL. 
Fixed, thanks!
Comment 5 dfilter service freebsd_committer 2008-09-12 23:16:06 UTC
roberto     2008-09-12 22:15:43 UTC

  FreeBSD src repository

  Modified files:        (Branch: RELENG_7)
    usr.sbin/ntp         config.h 
  Log:
  SVN rev 182989 on 2008-09-12 22:15:43Z by roberto
  
  MFH r182944:
    Makefile.inc already defines OPENSSL if crypto is available/wanted.
  
  PR:             bin/127296
  Submitted by:   olivier
  Approved by:    re (gnn)
  
  Revision   Changes    Path
  1.13.10.2  +1 -1      src/usr.sbin/ntp/config.h
_______________________________________________
cvs-all@freebsd.org mailing list
http://lists.freebsd.org/mailman/listinfo/cvs-all
To unsubscribe, send any mail to "cvs-all-unsubscribe@freebsd.org"
Comment 6 dfilter service freebsd_committer 2008-09-12 23:20:57 UTC
roberto     2008-09-12 22:20:24 UTC

  FreeBSD src repository

  Modified files:        (Branch: RELENG_6)
    usr.sbin/ntp         config.h 
  Log:
  SVN rev 182991 on 2008-09-12 22:20:24Z by roberto
  
  MFH r182944:
    Makefile.inc already defines OPENSSL if crypto is available/wanted.
  
  PR:             bin/127296
  Submitted by:   olivier
  Approved by:    re (gnn)
  
  Revision  Changes    Path
  1.13.2.2  +1 -1      src/usr.sbin/ntp/config.h
_______________________________________________
cvs-all@freebsd.org mailing list
http://lists.freebsd.org/mailman/listinfo/cvs-all
To unsubscribe, send any mail to "cvs-all-unsubscribe@freebsd.org"